--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <!--[if lte IE 9]><meta http-equiv="refresh" content="0;url=/ie.html"><![endif]-->
+    <!--[if lte IE 9]><meta http-equiv="refresh" content="0;url=./ie.html"><![endif]-->
 
     <title>{{ page.title }}</title>
     <meta name="description" content="">
 
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
   </head>
   <body>
     <aside id="sidebar">
       <nav id="tags">
-        <a href="/index.html" id="avatar"></a>
+        <a href="./index.html" id="avatar"></a>
 
         <ul id="tags__ul">
           <li id="js-label1" class="tags__li tags-btn active">All Posts</li>
@@ -60,9 +60,9 @@
 
     <button id="js-fullscreen"><span id="icon-arrow" class="fontello"></span></button>
 
-    <script src="/assets/js/jquery-2.0.3.min.js"></script>
-    <script src="/assets/js/jquery.pjax.js"></script>
-    <script src="/assets/js/nprogress.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/jquery-2.0.3.min.js"></script>
+    <script src="./assets/js/jquery.pjax.js"></script>
+    <script src="./assets/js/nprogress.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
