--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -8,7 +8,7 @@
     <title>{{ page.title }}</title>
     <meta name="description" content="">
 
-    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/blog/assets/css/style.css">
   </head>
   <body>
     <aside id="sidebar">
@@ -60,9 +60,9 @@
 
     <button id="js-fullscreen"><span id="icon-arrow" class="fontello"></span></button>
 
-    <script src="./assets/js/jquery-2.0.3.min.js"></script>
-    <script src="./assets/js/jquery.pjax.js"></script>
-    <script src="./assets/js/nprogress.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="/blog/assets/js/jquery-2.0.3.min.js"></script>
+    <script src="/blog/assets/js/jquery.pjax.js"></script>
+    <script src="/blog/assets/js/nprogress.js"></script>
+    <script src="/blog/assets/js/script.js"></script>
   </body>
 </html>
