change index url

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -13,7 +13,7 @@
   <body>
     <aside id="sidebar">
       <nav id="tags">
-        <a href="./index.html" id="avatar"></a>
+        <a href="/blog/index.html" id="avatar"></a>
 
         <ul id="tags__ul">
           <li id="js-label1" class="tags__li tags-btn active">All Posts</li>
@@ -32,7 +32,7 @@
 
       <div id="posts-list">
         <form action="" id="search-form">
-          <a href="./index.html" id="mobile-avatar"></a>
+          <a href="/blog/index.html" id="mobile-avatar"></a>
           <!-- NOTE: input field is disabled by default -->
           <input id="search-input" type="text" placeholder="Search unavailable" disabled >
         </form>
